fix spacing

--- a/theme/style-editor.css
+++ b/theme/style-editor.css
@@ -4237,6 +4237,11 @@ div.wpcf7-validation-errors {
     padding-bottom: 7.5rem;
   }
 
+  .lg\:py-\[10rem\] {
+    padding-top: 10rem;
+    padding-bottom: 10rem;
+  }
+
   .lg\:pb-20 {
     padding-bottom: 5rem;
   }
